[FIX] Make search form visible.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@32023 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/fivealive.css
+++ b/styles/fivealive.css
@@ -70,6 +70,7 @@ body.fixed_width .fixedwidth {
 	position: absolute;
 	bottom: 10px;
 	right: 10px;
+	z-index: 1;
 }
 
 #middle {
